@@ -3,6 +3,6 @@ DIST drumkv1-0.3.3.tar.gz 135246 SHA256 554270e967eb6f36fdd37efd4b7773216fa6cf1a
 EBUILD drumkv1-0.3.2-r1.ebuild 1585 SHA256 185cd0ec513b23d3b2aa5bda685170a3efd26d40eedd74ba14727ca97af526b5 SHA512 0e0942315a287f3437b5863f3c34dabe3c2192eb27057575bf80bced07dc5ae5dab28797dcce050bc3b94d8c600f9f9245c9432bbdc3a5baf479e091fd526f61 WHIRLPOOL d78132e040b417412982f1c6bc83dc38983236afbcce97822acbd23a44a865baab98808c027e1222913d4b9302a6701d1916f605c2bd1c56c64f465f89df5237
 EBUILD drumkv1-0.3.2.ebuild 1056 SHA256 7d43362a8e6f40a5d85fa1f4e52a9a4ed9ddea372d9e091e0cd7fa95fb028c14 SHA512 1e285c590eea3651ceaa6cc76f8347017f83a86f304290211e957b99d0300661360c3c276741e003f49cdb5e3615971dfdc9692d3c36e34e34895a86524a03dd WHIRLPOOL 53c7df9b4c3c0ec525d94b9d848b239f71104fae86a9c05f82e53224596c9ca36b27437daf5b40507031a83bbf007926255ab9f2654ed01760e550001e785643
 EBUILD drumkv1-0.3.3.ebuild 1636 SHA256 14e876dea11dd52f585ebf2c0c1ec6b5810b2e664f7165fe6ee840cd1013de40 SHA512 a0ad5905c68a7d12a1f96388e4e2f13a26054be4f7d471258d91352e89e0b8983e487ff555c7481530fb0231f79ac0f8ec82abbfa40563a74f375ab0847575fa WHIRLPOOL eaab85a3046b969788bf6f297209289ffde59292cbb3ecf10e27733ca86e0efa6a37b7b5386c46245602d40ad1dbf2a27ebf8e3e958202f88c4f4506ee2df094
-EBUILD drumkv1-9999.ebuild 1636 SHA256 14e876dea11dd52f585ebf2c0c1ec6b5810b2e664f7165fe6ee840cd1013de40 SHA512 a0ad5905c68a7d12a1f96388e4e2f13a26054be4f7d471258d91352e89e0b8983e487ff555c7481530fb0231f79ac0f8ec82abbfa40563a74f375ab0847575fa WHIRLPOOL eaab85a3046b969788bf6f297209289ffde59292cbb3ecf10e27733ca86e0efa6a37b7b5386c46245602d40ad1dbf2a27ebf8e3e958202f88c4f4506ee2df094
-MISC ChangeLog 1173 SHA256 d865cc89d80e69427b6ef4bf66d623d18a395080788057cd558962d1b1bbe699 SHA512 da985437684f92c432ede7dc2e50b4aefb70dbe5785373e33866789b9c8245435f456948b9aebefc6c2fd96578c1619b000fe7f05bb40087302def1869219de8 WHIRLPOOL 1862d21f4152c4edaeb4f7e2b7d7a7ff387f4bc9f17378d30a28c1f8d6fbfe3a0c4936f99c4ea4fa26e7ff425684d87675df108069671fdfba2e55a8e30ba86b
+EBUILD drumkv1-9999.ebuild 1808 SHA256 102d1b8b565b01d2c91c770da5f21ad88045d959ed8f3f8255d57566c29837bb SHA512 235da4b3dd41b90dca3c0bf9312bf4c03e03dab931e86b5f91a57307a5c0e2845aa54ed8f7176dfd64725e320e4bc1a27ced44239e9baf35838fd80bec6a5f7c WHIRLPOOL b9d0a5fedda957ec482e0afd58b113f6b193643cb919521093886166217960fe0d7523067dab30dcb34479a8f1b0c66f71ffb34dff3c55755c4e2ae53b2832fb
+MISC ChangeLog 1318 SHA256 81e7dfa458fbb2c8869d9c22a827c0a5083d45a084861cf097a0753341941a20 SHA512 612c45a00dd35e94696b816e857b514ab70b254d2e232156481b90ac6b8d0f1352a58a4b4e9970c5a169d6d5d2b0154fd98f126a5048cf9b002cf733d8c86b17 WHIRLPOOL 84b45aa93df6e36a4ceaa339610ac67fe75112d9de7027f117b793f7e3c977e467001e1239b364b23543d19a8ececc2d8a5ee9cf2ad657f891db5bffd90b9c00
 MISC metadata.xml 443 SHA256 5e4f2487b24581591d2196bfb8f55855d54003e43d9a1d193427def374e49f0a SHA512 d79095bdea6e89aa6c85edab36e47b085a48f5543aadfc02c026e007b03b3c416448d6d508b68975d8069590f3f6ca4a5ee25e8356c309adf550278d9ac05d22 WHIRLPOOL 247e41d25cf355611945b3350ddb06fae65d2ca63ba9ff49e589e6a573969d64b752607debc80862cbe54e7b6b4d828ffa22646b7adce7af223e6a0c1828c2ab
